sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: not found: value x
    x=plusPetit(j,i)
    ^AlgSelectionSort:7: error: not found: value u
  echange(u,x)
          ^AlgSelectionSort:7: error: not found: value x
  echange(u,x)
            ^