sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
var j=0
while(j<getNombreValeurs()){
  for (i <- j to getNombreValeurs() -1){
    x=plusPetit(j,i)
  echange(u,x)
  j+=1
  }
}}